--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 黄道宏's Blog
+title: Huangdaohong's Blog
 SEOTitle: 黄道宏的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: hdh2224397297@gmail.com
