--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 黄道宏的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: hdh2224397297@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+keyword: "BY, BY Blog, 黄道宏的博客, huangdaohong, 黄道宏, iOS, Apple, iPhone"
 url: "http://huangdaohong.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/HuangDaoghong/huangdaohong.github.io.git" # you code repository
