--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Huangdaohong's Blog
 SEOTitle: 黄道宏的博客 | BY Blog
-header-img: me.jpg
+header-img: img/desk.png
 email: hdh2224397297@gmail.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 黄道宏的博客, huangdaohong, 黄道宏, iOS, Apple, iPhone"
